--- a/.github/workflows/workflow-b&t.yml
+++ b/.github/workflows/workflow-b&t.yml
@@ -24,15 +24,10 @@ jobs:
           node-version: '18.x'
       - run: npm install
       - run: npm test
-  sca:
+  sast:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - name: checkout repo
-        uses: actions/checkout@v3
-      - name: use node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18.x'
-      - run: npm install
-      - run: npm audit
+      - uses: actions/checkout@v4
+      - name: Bearer
+        uses: bearer/bearer-action@v2
